--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>groupId</groupId>
     <artifactId>architectureExample</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    
+	
+	
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
@@ -21,5 +23,18 @@
         </dependency>
 
     </dependencies>
-
+	<build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+            </configuration>
+          </plugin>
+        </plugins>
+	
+	</build>
 </project>
